Feature: Implement riverpod and formz for login/register screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.9
+  formz: ^0.6.1
   go_router: ^12.1.3
   google_fonts: ^6.1.0
+  riverpod: ^2.4.9
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -57,12 +53,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-
   assets:
     - assets/loaders/
     - assets/images/
     - assets/google_fonts/montserrat_alternates/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
