--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.9
   formz: ^0.6.1
   go_router: ^12.1.3
@@ -57,6 +58,8 @@ flutter:
     - assets/loaders/
     - assets/images/
     - assets/google_fonts/montserrat_alternates/
+    - .env
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
