--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.9
+  flutter_staggered_grid_view: ^0.7.0
   formz: ^0.6.1
   go_router: ^12.1.3
   google_fonts: ^6.1.0
